--- a/electrical.html
+++ b/electrical.html
@@ -90,13 +90,197 @@
             </div>
         </header>
 
-        <section class="py-10 lg:py-20">
+        <section
+            class="py-10 lg:py-20 relative flex justify-center items-center"
+        >
+            <div class="absolute top-0 left-0 max-h-[595px] w-full">
+                <img
+                    src="./assets/images/electrical-hero.jpeg"
+                    alt="Electrical fitout"
+                    class="object-cover w-full min-h-[525px] max-h-[595px]"
+                />
+                <div
+                    class="bg-black opacity-[0.5] absolute top-0 left-0 h-full w-full z-1"
+                ></div>
+                <img
+                    src="./assets/images/elec-northern-logo.svg"
+                    alt="elec northern logo"
+                    class="absolute bottom-4 lg:bottom-10 right-4 lg:right-24 w-28 lg:w-40 z-10"
+                />
+            </div>
+            <div
+                class="container relative flex justify-center flex-col mt-20 z-10"
+            >
+                <h2 class="text-xl lg:text-3xl text-white lg:leading-tight">
+                    Northern Electrical Solutions
+                </h2>
+                <h2
+                    class="text-5xl lg:text-[90px] text-white lg:leading-tight mt-14 lg:-ml-2"
+                >
+                    Electrical & Lighting
+                </h2>
+                <h2
+                    class="text-3xl lg:text-[40px] text-white lg:leading-tight mt-4 lg:mt-0"
+                >
+                    Supply, installation & repairs
+                </h2>
+            </div>
+        </section>
+
+        <section class="mt-40 lg:mt-52">
             <div class="container">
                 <h2
                     class="text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
                 >
-                    This is the electrical page
+                    A friendly, tidy and professional service by tradesmen who
+                    respect your home and always carry out work of the highest
+                    quality.
                 </h2>
+            </div>
+        </section>
+
+        <section class="py-10 lg:py-20">
+            <div class="container">
+                <div class="grid gird-cols-1 lg:grid-cols-2 gap-8">
+                    <img
+                        src="./assets/images/electrical-2.jpeg"
+                        alt=""
+                        class="w-full rounded-lg"
+                    />
+                    <img
+                        src="./assets/images/electrical-3.jpeg"
+                        alt=""
+                        class="w-full rounded-lg"
+                    />
+                </div>
+            </div>
+        </section>
+
+        <section class="pb-10 lg:pb-20">
+            <div class="container">
+                <h2
+                    class="text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
+                >
+                    Electricians to the commercial and industrial sectors<br />
+                    <span class="text-i4-pink">Nationwide + Europe</span>
+                </h2>
+                <p class="text-white text-2xl pt-6 w-full lg:w-10/12">
+                    Proudly serving commercial and industrial enterprises.
+                    Specialists in the hospitality industry but also covering
+                    the retail, leisure, education, events, film, TV and music
+                    industries.
+                </p>
+            </div>
+        </section>
+
+        <section class="pb-10 lg:pb-20">
+            <div class="container">
+                <div class="flex flex-wrap">
+                    <div
+                        class="space-y-4 text-white flex flex-col pt-4 w-full lg:w-1/2 lg:pr-4"
+                    >
+                        <h2
+                            class="text-3xl lg:text-[40px] text-white lg:leading-tight"
+                        >
+                            Electrical services
+                        </h2>
+                        <span class="border-b border-white w-max"
+                            >Warehouse re wire</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Workplace and office lighting systems</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Consumer units / Fuse board replacements</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Commercial EV charging points</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >EICR testing and certificates</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >PAT testing</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Renewable energy</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Emergency response</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Security systems</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Installation and repairs</span
+                        >
+                        <span class="border-b border-white w-max">CCTV</span>
+                        <span class="border-b border-white w-max"
+                            >Burglar and wireless alarms</span
+                        >
+                    </div>
+
+                    <div
+                        class="space-y-4 text-white flex flex-col pt-4 w-full lg:w-1/2 lg:pr-4 mt-10 lg:mt-0"
+                    >
+                        <h2
+                            class="text-3xl lg:text-[40px] text-white lg:leading-tight"
+                        >
+                            Lighting services
+                        </h2>
+                        <span class="border-b border-white w-max"
+                            >External and internal lightinge</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Trough lights</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Street lights</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Energy saving lighting</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Path and access lighting</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Decorative lights</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Christmas lights</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Floodlights and security lighting</span
+                        >
+                        <span class="border-b border-white w-max">LED</span>
+                        <span class="border-b border-white w-max"
+                            >Festoon lights</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Re lamping</span
+                        >
+                        <span class="border-b border-white w-max"
+                            >Emergency lighting</span
+                        >
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-10 lg:py-20 mx-auto">
+            <div class="container">
+                <p class="text-center text-white text-2xl lg:text-4xl">
+                    Get in touch today to discuss any requirements you may have
+                </p>
+                <div class="w-full flex flex-wrap justify-center gap-5 mt-10">
+                    <a href="mailto:hello@i4brands.co.uk" class="btn-outline">
+                        Email us now
+                    </a>
+
+                    <a href="tel:07506731023" class="btn-outline">
+                        Telephone
+                    </a>
+                </div>
             </div>
         </section>
 
