--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                     <img
                         src="./assets/images/i4Brands-logo.svg"
                         alt="i4Brands logo"
-                        class="w-56 lg:w-40"
+                        class="w-48 lg:w-40"
                     />
                 </a>
 
@@ -40,14 +40,27 @@
                                     >01</span
                                 >About</a
                             >
-                            <a
-                                href="./services.html"
-                                class="relative pl-5 border-white border-b lg:w-1/4"
-                                ><span
-                                    class="absolute top-0 left-0 text-[10px] text-i4-pink"
-                                    >02</span
-                                >Services</a
+                            <div
+                                class="flex justify-between border-white border-b lg:w-1/4 items-center"
                             >
+                                <a href="./services.html" class="relative pl-5"
+                                    ><span
+                                        class="absolute top-0 left-0 text-[10px] text-i4-pink"
+                                        >02</span
+                                    >Services
+                                </a>
+                                <span
+                                    class="additional-items text-i4-pink text-4xl"
+                                    >+</span
+                                >
+                            </div>
+
+                            <a
+                                href="./electrical.html"
+                                class="relative pl-5 hidden w-full hidden-menu-item border-white border-b lg:w-1/4"
+                                >Electrical
+                            </a>
+
                             <a
                                 href="./projects.html"
                                 class="relative pl-5 border-white border-b lg:w-1/4 flex justify-between"
@@ -55,10 +68,7 @@
                                     class="absolute top-0 left-0 text-[10px] text-i4-pink"
                                     >03</span
                                 >Projects
-                                <span class="additional-items text-i4-pink"
-                                    >+</span
-                                ></a
-                            >
+                            </a>
                             <a
                                 href="./contact.html"
                                 class="relative pl-5 border-white border-b lg:w-1/4"
