--- a/branding.html
+++ b/branding.html
@@ -113,25 +113,32 @@
             </div>
         </header>
 
-        <section
-            class="py-10 lg:py-20 relative flex justify-center items-center"
-        >
-            <div class="absolute top-0 left-0 max-h-[595px] w-full">
-                <img
+        <section class="relative flex justify-center items-center">
+            <div class="relative top-0 left-0 w-full">
+                <!-- <img
                     src="./assets/images/Greggs-signage.webp"
                     alt="Greggs signage"
                     class="object-cover w-full min-h-[525px] h-[595px]"
                 />
                 <div
                     class="bg-black opacity-[0.5] absolute top-0 left-0 h-full w-full z-1"
-                ></div>
+                ></div> -->
+                <video
+                    autoplay
+                    muted
+                    class="w-full h-full"
+                    src="./assets/images/MAIN ANIMATION 2 FULL HD.mov"
+                ></video>
+
+                <img
+                    src="./assets/images/i4Brands-logo.svg"
+                    alt="elec northern logo"
+                    class="absolute bottom-4 lg:bottom-10 right-4 lg:right-24 w-28 lg:w-40 z-10"
+                />
             </div>
-            <div
+            <!-- <div
                 class="container relative flex justify-center flex-col mt-20 z-10"
             >
-                <h2 class="text-xl lg:text-3xl text-white lg:leading-tight">
-                    Branding Solutions
-                </h2>
                 <h2
                     class="text-5xl lg:text-[90px] text-white lg:leading-tight mt-14 lg:-ml-2"
                 >
@@ -142,10 +149,10 @@
                 >
                     Design, development through to Delivery.
                 </h2>
-            </div>
+            </div> -->
         </section>
 
-        <section class="mt-56 lg:mt-52">
+        <section class="py-10 lg:py-20">
             <div class="container">
                 <h2
                     class="text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
@@ -157,7 +164,7 @@
             </div>
         </section>
 
-        <section class="py-10 lg:py-20">
+        <section class="pb-10 lg:pb-20">
             <div class="container">
                 <div class="grid gird-cols-1 lg:grid-cols-2 gap-8">
                     <img
