--- a/branding.html
+++ b/branding.html
@@ -126,8 +126,9 @@
                 <video
                     autoplay
                     muted
+                    loop
                     class="w-full h-full"
-                    src="./assets/images/MAIN ANIMATION 2 FULL HD.mov"
+                    src="./assets/images/services-video.MP4"
                 ></video>
 
                 <img
@@ -204,67 +205,207 @@
 
         <section class="pb-10 lg:pb-20">
             <div class="container">
-                <div class="flex flex-wrap">
-                    <div
-                        class="space-y-4 text-white flex flex-col pt-4 w-full lg:w-1/2 lg:pr-4"
+                <h2
+                    class="text-3xl lg:text-[40px] text-i4-pink lg:leading-tight border-b border-i4-pink w-max"
+                >
+                    Services
+                </h2>
+                <div class="flex flex-col">
+                    <button
+                        class="accordion-title text-white text-left pt-10 text-2xl lg:text-4xl transition flex justify-between"
                     >
-                        <h2
-                            class="text-3xl lg:text-[40px] text-white lg:leading-tight"
-                        >
-                            Services
-                        </h2>
-                        <span class="border-b border-white w-max">Design</span>
-                        <span class="border-b border-white w-max"
-                            >Art Direction</span
-                        >
-                        <span class="border-b border-white w-max"
-                            >Office Graphics</span
-                        >
-                        <span class="border-b border-white w-max"
-                            >Merchandise</span
-                        >
-                        <span class="border-b border-white w-max"
-                            >Brand Identity</span
-                        >
-                        <span class="border-b border-white w-max"
-                            >Asset Creation</span
-                        >
-                        <span class="border-b border-white w-max"
-                            >Marketing</span
-                        >
+                        Design
+                        <span>+</span>
+                    </button>
+                    <div class="content">
+                        <p class="text-white pt-6 text-2xl">
+                            We provide a comprehensive range of services
+                            tailored to meet your creative needs. From
+                            eye-catching logos and branding that establish your
+                            identity, to stunning web and graphic designs that
+                            captivate your audience. We also excel in interior
+                            and architectural design, transforming spaces into
+                            functional works of art. Our team of skilled
+                            designers is dedicated to bringing your vision to
+                            life through innovative and aesthetically pleasing
+                            solutions.
+                        </p>
                     </div>
 
-                    <div
-                        class="space-y-4 text-white flex flex-col pt-4 w-full lg:w-1/2 lg:pr-4 mt-10 lg:mt-0"
+                    <button
+                        class="accordion-title text-white text-left pt-6 lg:pt-10 text-2xl lg:text-4xl transition flex justify-between"
                     >
-                        <h2
-                            class="text-3xl lg:text-[40px] text-white lg:leading-tight"
-                        >
-                            Industries
-                        </h2>
-                        <span class="border-b border-white w-max"
-                            >Hospitality</span
-                        >
-                        <span class="border-b border-white w-max">Retail</span>
-                        <span class="border-b border-white w-max">Leisure</span>
-                        <span class="border-b border-white w-max"
-                            >Healthcare</span
-                        >
-                        <span class="border-b border-white w-max"
-                            >Education</span
-                        >
-                        <span class="border-b border-white w-max"
-                            >Film, TV and Music</span
-                        >
-                        <span class="border-b border-white w-max"
-                            >Automotive</span
-                        >
+                        Manufacture and Supply
+                        <span>+</span>
+                    </button>
+                    <div class="content">
+                        <p class="text-white pt-6 text-2xl">
+                            Our expertise in manufacture and supply ensures a
+                            seamless production process for your business. We
+                            handle everything from sourcing raw materials to
+                            quality-controlled manufacturing, guaranteeing
+                            consistent, high-quality products. Our supply chain
+                            management streamlines distribution, ensuring timely
+                            delivery to your customers. Whether you're launching
+                            a new product line or restocking inventory, trust us
+                            to optimize efficiency and reliability in your
+                            manufacturing and supply chain operations.
+                        </p>
+                    </div>
+
+                    <button
+                        class="accordion-title text-white text-left pt-6 lg:pt-10 text-2xl lg:text-4xl transition flex justify-between"
+                    >
+                        Installation
+                        <span>+</span>
+                    </button>
+                    <div class="content">
+                        <p class="text-white pt-6 text-2xl">
+                            Graphics and signage installation is where we turn
+                            concepts into reality. Our skilled team executes
+                            precision installations, bringing your brand to life
+                            in the physical world. Whether it's eye-catching
+                            storefront signage, interior graphics, or vehicle
+                            wraps, we ensure impeccable results. With meticulous
+                            attention to detail and the latest installation
+                            techniques, we transform spaces into impactful,
+                            branded environments that leave a lasting
+                            impression.
+                        </p>
+                    </div>
+
+                    <button
+                        class="accordion-title text-white text-left pt-6 lg:pt-10 text-2xl lg:text-4xl transition flex justify-between"
+                    >
+                        Asset Management
+                        <span>+</span>
+                    </button>
+                    <div class="content">
+                        <p class="text-white pt-6 text-2xl">
+                            Asset management is the cornerstone of financial
+                            success. Our expertise lies in optimizing your
+                            investments, ensuring they align with your goals and
+                            risk tolerance. We offer comprehensive portfolio
+                            analysis, risk assessment, and tailored strategies
+                            to maximize returns while minimizing exposure. Our
+                            commitment to proactive monitoring and adjustments
+                            ensures your assets stay on the right track,
+                            securing your financial future and peace of mind.
+                        </p>
+                    </div>
+
+                    <h2
+                        class="text-3xl lg:text-[40px] text-i4-pink lg:leading-tight border-b border-i4-pink w-max pt-14"
+                    >
+                        Maintenance / Aftercare
+                    </h2>
+                    <button
+                        class="accordion-title text-white text-left pt-10 text-2xl lg:text-4xl transition flex justify-between"
+                    >
+                        Electrics and Lighting
+                        <span>+</span>
+                    </button>
+                    <div class="content">
+                        <p class="text-white pt-6 text-2xl">
+                            Electrics and lighting are the essential elements of
+                            modern spaces. We specialize in designing and
+                            installing cutting-edge electrical systems and
+                            lighting solutions that enhance functionality and
+                            aesthetics. From energy-efficient LED installations
+                            to custom lighting designs, we create environments
+                            that are safe, efficient, and visually striking.
+                            Trust us to illuminate your spaces with innovation
+                            and expertise, brightening your world in style.
+                        </p>
+                    </div>
+
+                    <button
+                        class="accordion-title text-white text-left pt-6 lg:pt-10 text-2xl lg:text-4xl transition flex justify-between"
+                    >
+                        Access Machinery
+                        <span>+</span>
+                    </button>
+                    <div class="content">
+                        <p class="text-white pt-6 text-2xl">
+                            Access machines, also known as aerial work
+                            platforms, are indispensable for reaching elevated
+                            areas safely and efficiently. Our access machines
+                            are equipped with advanced technology and safety
+                            features, making them ideal for various tasks such
+                            as maintenance, construction, and inspection. With a
+                            range of models and sizes, we provide versatile
+                            solutions to access challenging heights, ensuring
+                            your projects are completed with precision and
+                            worker safety in mind.
+                        </p>
+                    </div>
+
+                    <button
+                        class="accordion-title text-white text-left pt-6 lg:pt-10 text-2xl lg:text-4xl transition flex justify-between"
+                    >
+                        De Branding
+                        <span>+</span>
+                    </button>
+                    <div class="content">
+                        <p class="text-white pt-6 text-2xl">
+                            Debranding is the strategic process of redefining a
+                            brand's identity by removing or altering its visual
+                            elements, such as logos or slogans. This can be done
+                            for various reasons, like repositioning in the
+                            market or merging with another entity. Our
+                            debranding expertise ensures a seamless transition
+                            while maintaining brand recognition or crafting an
+                            entirely new image, helping businesses evolve and
+                            adapt effectively.
+                        </p>
+                    </div>
+
+                    <button
+                        class="accordion-title text-white text-left pt-6 lg:pt-10 text-2xl lg:text-4xl transition flex justify-between"
+                    >
+                        Merchandise
+                        <span>+</span>
+                    </button>
+                    <div class="content">
+                        <p class="text-white pt-6 text-2xl">
+                            Merchandise is a powerful vehicle for brand
+                            expression and connection. Our expertise lies in
+                            curating a diverse range of branded merchandise,
+                            from custom apparel and accessories to promotional
+                            items. We design and source high-quality products
+                            that resonate with your audience, effectively
+                            extending your brand's reach and leaving a lasting
+                            impression. Elevate your marketing strategy with
+                            merchandise that's not just functional but also
+                            emblematic of your identity.
+                        </p>
+                    </div>
+
+                    <button
+                        class="accordion-title text-white text-left pt-6 lg:pt-10 text-2xl lg:text-4xl transition flex justify-between"
+                    >
+                        Groundworks
+                        <span>+</span>
+                    </button>
+                    <div class="content">
+                        <p class="text-white pt-6 text-2xl">
+                            Groundworks are the foundation of successful
+                            construction projects. Our expert team specializes
+                            in preparing sites for construction, ensuring proper
+                            excavation, leveling, and infrastructure
+                            installation. From laying utility lines to creating
+                            stable foundations, we guarantee the groundwork is
+                            meticulously executed, setting the stage for a safe
+                            and efficient construction process. Trust us to
+                            transform your vision into reality with precision
+                            and reliability.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="py-5 lg:py-10 overflow-x-hidden">
+        <section class="py-5 overflow-x-hidden">
             <div class="container">
                 <span
                     class="text-white uppercase text-sm font-light tracking-widest block"
@@ -419,5 +560,9 @@
         <script type="text/javascript" src="./src/js/WorkSlider.js"></script>
         <script type="text/javascript" src="./src/js/MenuToggle.js"></script>
         <script type="text/javascript" src="./src/js/TouchHover.js"></script>
+        <script
+            type="text/javascript"
+            src="./src/js/BrandingAccordion.js"
+        ></script>
     </body>
 </html>
