--- a/branding.html
+++ b/branding.html
@@ -126,6 +126,7 @@
                 <video
                     autoplay
                     muted
+                    playsinline
                     loop
                     class="w-full h-full"
                     src="./assets/images/services-video.MP4"
