--- a/branding.html
+++ b/branding.html
@@ -157,9 +157,12 @@
         <section class="py-10 lg:py-20">
             <div class="container">
                 <h2
-                    class="text-3xl lg:text-[40px] text-white lg:leading-tight w-full lg:w-11/12"
+                    class="text-2xl text-white lg:leading-tight w-full lg:w-11/12"
                 >
-                    Helping you and your brand stand out from your competitors.
+                    <span class="text-4xl"
+                        >Helping you and your brand stand out from your
+                        competitors.</span
+                    ><br />
                     Bringing your brand to life through signage, graphics,
                     lighting, artwork and merchandise.
                 </h2>
@@ -278,7 +281,7 @@
                     <button
                         class="accordion-title text-white text-left pt-6 lg:pt-10 text-2xl lg:text-4xl transition flex justify-between"
                     >
-                        Asset Management
+                        Asset Management, Maintenance / Aftercare
                         <span>+</span>
                     </button>
                     <div class="content">
@@ -295,11 +298,6 @@
                         </p>
                     </div>
 
-                    <h2
-                        class="text-3xl lg:text-[40px] text-i4-pink lg:leading-tight border-b border-i4-pink w-max pt-14"
-                    >
-                        Maintenance / Aftercare
-                    </h2>
                     <button
                         class="accordion-title text-white text-left pt-10 text-2xl lg:text-4xl transition flex justify-between"
                     >
