--- a/branding.html
+++ b/branding.html
@@ -157,38 +157,166 @@
         <section class="py-10 lg:py-20">
             <div class="container">
                 <h2
-                    class="text-2xl text-white lg:leading-tight w-full lg:w-11/12"
+                    class="text-3xl text-white lg:leading-tight w-full lg:w-11/12"
                 >
-                    <span class="text-4xl"
+                    <span class="text-5xl"
                         >Helping you and your brand stand out from your
                         competitors.</span
-                    ><br />
+                    ><br /><br />
                     Bringing your brand to life through signage, graphics,
                     lighting, artwork and merchandise.
                 </h2>
             </div>
         </section>
 
-        <section class="pb-10 lg:pb-20">
+        <section class="pb-5 overflow-x-hidden">
             <div class="container">
-                <div class="grid gird-cols-1 lg:grid-cols-2 gap-8">
-                    <img
-                        src="./assets/images/Trader Deli.jpeg"
-                        alt=""
-                        class="w-full rounded-lg"
-                    />
-                    <img
-                        src="./assets/images/Avison Young.jpeg"
-                        alt=""
-                        class="w-full rounded-lg"
-                    />
+                <span
+                    class="text-white uppercase text-sm font-light tracking-widest block"
+                    >Completed work we have carried out</span
+                >
+                <div class="px-0 w-[140%] sm:w-[135%] pt-5 lg:pt-10">
+                    <div class="js-showcase-slider -ml-2">
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/brasserie-image-1.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Brasserie External Signage</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/chiq-image-1.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Chiquito Signage</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/f-b-image-2.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Frankie & Benny's</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/giraffe-image-1.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Giraffe internal signage</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/pieminster-image-1.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Pieminster Graphics</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/storeys-image-1.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Storey's Amusements</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/alc-image-2.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >The Alchemist</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/bar-image-1.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Barburrito</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/sudway-image-1.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Subway</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/piz-image-1.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Pizzaluxe</span
+                            >
+                        </div>
+                        <div
+                            class="w-full h-64 max-h-[64] sm:h-72 sm:max-h-72 md:h-64 md:max-h-64 lg:h-80 lg:max-h-80 px-2"
+                        >
+                            <img
+                                src="./assets/images/slider-1/alc-image-1.jpg"
+                                alt="Alchemist"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Alchemist Lighting</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/b-image-1.jpg"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Exterior lighting</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/nandos-image-1.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Nandos</span
+                            >
+                        </div>
+                    </div>
                 </div>
+                <div class="js-showcase-slider-dots pt-5"></div>
             </div>
         </section>
 
         <section class="pb-10 lg:pb-20">
             <div class="container">
-                <p class="text-white text-2xl pt-6 w-full lg:w-10/12">
+                <p class="text-white text-2xl pt-10 w-full lg:w-10/12">
                     First impressions are so important for brands, i4Brands can
                     manage any preventative and reactive signage, graphics,
                     lighting & electrical maintenance your brand may require
@@ -843,6 +971,10 @@
         <script
             type="text/javascript"
             src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="./src/js/ShowcaseSlider.js"
         ></script>
         <script type="text/javascript" src="./src/js/WorkSlider.js"></script>
         <script type="text/javascript" src="./src/js/MenuToggle.js"></script>
